--- a/index.html
+++ b/index.html
@@ -10,5 +10,13 @@
   </head>
   <body>
     <div id="root"></div>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KTS424V6D7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KTS424V6D7');
+</script>
   </body>
 </html>
